# App-emotiv

./: .gitignore  CMakeLists.txt  README.md
